Add functionality for numbers to display when clicked on dialer

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <button class="number" id="star" style="font-size : 20px;">*</button>
         <button class="number" id="zero" style="font-size : 20px;">0</button>
         <button class="number" id="pound" style="font-size : 20px;">#</button>
+        <p></p>
+        <input type="text" value="" id="inputText" style="width: 150px; font-size: 20px;" />
       </div>
 
 
